k8s/apps/uptime-kuma/authentik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost
  namespace: uptime-kuma
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
